ing/testingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garafana-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: grafana.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-np
                port:
                  number: 80
